bison_dfa_assignment/part2_grammar1.output
Grammar

    0 $accept: expr $end

    1 expr: expr '+' term
    2     | expr '-' term
    3     | term

    4 term: term '*' primary
    5     | primary

    6 primary: ID
    7        | '(' expr ')'
    8        | '-' primary


Terminals, with rules where they appear

    $end (0) 0
    '(' (40) 7
    ')' (41) 7
    '*' (42) 4
    '+' (43) 1
    '-' (45) 2 8
    error (256)
    ID (258) 6


Nonterminals, with rules where they appear

    $accept (9)
        on left: 0
    expr (10)
        on left: 1 2 3
        on right: 0 1 2 7
    term (11)
        on left: 4 5
        on right: 1 2 3 4
    primary (12)
        on left: 6 7 8
        on right: 4 5 8


State 0

    0 $accept: • expr $end

    ID   shift, and go to state 1
    '-'  shift, and go to state 2
    '('  shift, and go to state 3

    expr     go to state 4
    term     go to state 5
    primary  go to state 6


State 1

    6 primary: ID •

    $default  reduce using rule 6 (primary)


State 2

    8 primary: '-' • primary

    ID   shift, and go to state 1
    '-'  shift, and go to state 2
    '('  shift, and go to state 3

    primary  go to state 7


State 3

    7 primary: '(' • expr ')'

    ID   shift, and go to state 1
    '-'  shift, and go to state 2
    '('  shift, and go to state 3

    expr     go to state 8
    term     go to state 5
    primary  go to state 6


State 4

    0 $accept: expr • $end
    1 expr: expr • '+' term
    2     | expr • '-' term

    $end  shift, and go to state 9
    '+'   shift, and go to state 10
    '-'   shift, and go to state 11


State 5

    3 expr: term •
    4 term: term • '*' primary

    '*'  shift, and go to state 12

    $default  reduce using rule 3 (expr)


State 6

    5 term: primary •

    $default  reduce using rule 5 (term)


State 7

    8 primary: '-' primary •

    $default  reduce using rule 8 (primary)


State 8

    1 expr: expr • '+' term
    2     | expr • '-' term
    7 primary: '(' expr • ')'

    '+'  shift, and go to state 10
    '-'  shift, and go to state 11
    ')'  shift, and go to state 13


State 9

    0 $accept: expr $end •

    $default  accept


State 10

    1 expr: expr '+' • term

    ID   shift, and go to state 1
    '-'  shift, and go to state 2
    '('  shift, and go to state 3

    term     go to state 14
    primary  go to state 6


State 11

    2 expr: expr '-' • term

    ID   shift, and go to state 1
    '-'  shift, and go to state 2
    '('  shift, and go to state 3

    term     go to state 15
    primary  go to state 6


State 12

    4 term: term '*' • primary

    ID   shift, and go to state 1
    '-'  shift, and go to state 2
    '('  shift, and go to state 3

    primary  go to state 16


State 13

    7 primary: '(' expr ')' •

    $default  reduce using rule 7 (primary)


State 14

    1 expr: expr '+' term •
    4 term: term • '*' primary

    '*'  shift, and go to state 12

    $default  reduce using rule 1 (expr)


State 15

    2 expr: expr '-' term •
    4 term: term • '*' primary

    '*'  shift, and go to state 12

    $default  reduce using rule 2 (expr)


State 16

    4 term: term '*' primary •

    $default  reduce using rule 4 (term)
